# zoom-clone

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  logging_config.py  main.py  seed.py  time_utils.py
backend/app/crud/: chat.py  meetings.py  participants.py  recordings.py
backend/app/models/: __init__.py  chat_message.py  meeting.py  recording.py  user.py
backend/app/routers/: chat.py  meetings.py  participants.py  recordings.py
backend/app/schemas/: chat.py  meeting.py  recording.py  user.py
backend/app/ws/: manager.py  router.py
backend/tests/: conftest.py  test_chat.py  test_meetings.py  test_participants.py  test_recordings.py
docs/: api.md  architecture.md  database.md  decisions.md  deployment.md  prompt.md
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.mts
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/clips/: page.tsx
frontend/src/context/: MeetingContext.tsx  ThemeContext.tsx  UserContext.tsx
frontend/src/hooks/: useChat.ts  useMeeting.ts  useMeetings.ts  useRecording.ts  useWebRTC.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts  ws.ts
frontend/src/types/: index.ts
frontend/tests/: JoinNameModal.test.tsx  api.test.ts  useWebSocket.test.ts  utils.test.ts
(+23 files in other folders)
