[project]
name = "zoom-clone-backend"
version = "1.0.0"
description = "FastAPI backend for the Zoom clone"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
# B008: FastAPI relies on function calls (Depends(), File()) in argument defaults.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
